--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,70 +1,79 @@
+//lesscss-percentage(n)
+//  (n * 100)%
 /**
  * This is the main application stylesheet. It should include or import all
  * stylesheets used throughout the application as this is the only stylesheet in
  * the Grunt configuration that is automatically processed.
  */
-
-
 /**
- * First, we include the Stylus-related files and set up our grid and breakpoints.
+ * First, we include the Twitter Bootstrap LESS files. Only the ones used in the
+ * project should be imported as the rest are just wasting space.
  */
-
-// @import 'kouto-swiss'
-@import 'axis'
-@import 'jeet'
-@import 'rupture'
-
-edit()
-
-rupture.scale = 0 320 px 480 px 768 px 1024 px 1224 px 1824 px
-rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 'hd'
-
-section
-  center(1824px)
-aside
-  col(1/3)
-article
-  col(2/3)
-footer
-  stack()
-
-.container
-  max-width: 100%
-  
-.row
-  max-width: 100%
-
+@import 'bootstrap'
 /**
  * This is our main variables file. We must include it last so we can overwrite any variable
  * definitions in our imported stylesheets.
  */
-
 @import 'variables.styl'
-
-
 /**
  * Typography
  */
-
-
-
+@font-face
+  font-family 'Roboto'
+  font-style normal
+  font-weight 400
+  src local('Roboto Regular') //, local('Roboto-Regular'), fonts/Roboto-Regular.woff format('woff')
+code, pre, .pre
+  padding 5px
+  margin 10px 0
+  background-color #EFEFEF
+  border 1px solid #DADADA
+  border-radius 3px
+code
+  padding 0 3px
+pre
+  margin 10px 0
+  padding 5px
+.page-header
+  margin-top 60px
+  &:first-child
+    margin-top 20px
+h2
+  margin 20px 0
+  color #666
 /**
  * Navigation
  */
-
-
-
+.navbar
+  margin-top 20px
+  small
+    font-size 60%
 /**
  * Footer
  */
-
-
-
+.footer
+  margin-top 80px
+  .footer-inner
+    padding 40px 0
+    border-top 1px solid #DDD
+  .social
+    float right
+    margin 0
+    list-style none
+    li
+      float left
+      margin-left 20px
+      a, a:visited
+        color gray-light
+        text-decoration none
+        font-size 40px
+        transition(250ms ease-in-out)
+        &:hover
+          color gray
 /**
  * Now that all app-wide styles have been applied, we can load the styles for
  * all the submodules and components we are using. 
  *
  * TODO: In a later version of this boilerplate, I'd like to automate this.
  */
-
 //@import '../app/home/home.styl'
