--- a/src/stylus/variables.styl
+++ b/src/stylus/variables.styl
@@ -1,10 +1,10 @@
+//lesscss-percentage(n)
+//  (n * 100)%
 /**
  * These are the variables used throughout the application. This is where 
  * overwrites that are not specific to components should be maintained.
  */
-
 /**
  * Typography-related.
  */
-
-// @sansFontFamily: 'Roboto', sans-serif
+sansFontFamily = 'Roboto', sans-serif
